// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Offcanvas/CloseButton should render a CloseButton 1`] = `
".a {
  border-top-left-radius: 0.375rem;
}
.b {
  border-top-right-radius: 0.375rem;
}
.c {
  border-bottom-right-radius: 0.375rem;
}
.d {
  border-bottom-left-radius: 0.375rem;
}
.e {
  background-color: transparent;
}
.f {
  background-image: url(test-file-stub);
}
.g {
  background-position-x: center;
}
.h {
  background-origin: padding-box;
}
.i {
  background-clip: border-box;
}
.j {
  background-position-y: 1em;
}
.k {
  background-repeat: no-repeat;
}
.l {
  background-size: auto;
}
.m {
  box-sizing: content-box;
}
.n {
  color: #000;
}
.o {
  height: 1em;
}
.p {
  opacity: 0.5;
}
.q {
  padding-top: 10px;
}
.r {
  padding-bottom: 10px;
}
.s {
  padding-left: 0.25em;
}
.t {
  padding-right: 0.25em;
}
.u {
  width: 1em;
}
.y:disabled {
  opacity: 0.25;
}
.z:disabled {
  pointer-events: none;
}
.ab:disabled {
  user-select: none;
}
.ac {
  margin-top: calc(-0.5 * 1rem);
}
.ae {
  margin-right: calc(-0.5 * 1rem);
}
.af {
  margin-bottom: calc(-0.5 * 1rem);
}
.ag {
  border-top-width: 0;
}
.ah {
  border-right-width: 0;
}
.ai {
  border-bottom-width: 0;
}
.aj {
  border-left-width: 0;
}
.ak {
  border-top-color: rgb(0, 0, 0);
}
.al {
  border-right-color: rgb(0, 0, 0);
}
.am {
  border-bottom-color: rgb(0, 0, 0);
}
.an {
  border-left-color: rgb(0, 0, 0);
}
.v:focus {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.w:focus {
  opacity: 1;
}
.x:focus {
  outline-width: 0;
}


<button
  data-testid="offcanvas-close-button"
  type="button"
  class="a ab ac ae af ag ah ai aj ak al am an b c d e f g h i j k l m n o p q r s t u v w x y z offcanvas-btn-close"
  aria-label="Close"
></button
>;
"
`;

exports[`components/Offcanvas/CloseButton should render a CloseButton with className 1`] = `
".a {
  border-top-left-radius: 0.375rem;
}
.b {
  border-top-right-radius: 0.375rem;
}
.c {
  border-bottom-right-radius: 0.375rem;
}
.d {
  border-bottom-left-radius: 0.375rem;
}
.e {
  background-color: transparent;
}
.f {
  background-image: url(test-file-stub);
}
.g {
  background-position-x: center;
}
.h {
  background-origin: padding-box;
}
.i {
  background-clip: border-box;
}
.j {
  background-position-y: 1em;
}
.k {
  background-repeat: no-repeat;
}
.l {
  background-size: auto;
}
.m {
  box-sizing: content-box;
}
.n {
  color: #000;
}
.o {
  height: 1em;
}
.p {
  opacity: 0.5;
}
.q {
  padding-top: 10px;
}
.r {
  padding-bottom: 10px;
}
.s {
  padding-left: 0.25em;
}
.t {
  padding-right: 0.25em;
}
.u {
  width: 1em;
}
.y:disabled {
  opacity: 0.25;
}
.z:disabled {
  pointer-events: none;
}
.ab:disabled {
  user-select: none;
}
.ac {
  margin-top: calc(-0.5 * 1rem);
}
.ae {
  margin-right: calc(-0.5 * 1rem);
}
.af {
  margin-bottom: calc(-0.5 * 1rem);
}
.ag {
  border-top-width: 0;
}
.ah {
  border-right-width: 0;
}
.ai {
  border-bottom-width: 0;
}
.aj {
  border-left-width: 0;
}
.ak {
  border-top-color: rgb(0, 0, 0);
}
.al {
  border-right-color: rgb(0, 0, 0);
}
.am {
  border-bottom-color: rgb(0, 0, 0);
}
.an {
  border-left-color: rgb(0, 0, 0);
}
.v:focus {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.w:focus {
  opacity: 1;
}
.x:focus {
  outline-width: 0;
}


<button
  data-testid="offcanvas-close-button"
  type="button"
  class="a ab ac ae af ag ah ai aj ak al am an b c d e f g h i j k l m n o p q r s t u v w x y z offcanvas-btn-close sidebar-close"
  aria-label="Close"
></button
>;
"
`;
